--- a/your_receipe.html
+++ b/your_receipe.html
@@ -30,7 +30,7 @@
 
     <!-- Основное меню навигации -->
     <div class="menu">
-      <a href="index2.html">Главная</a> 
+      <a href="index.html">Главная</a> 
       <a href="receipes2.html">Рецепты</a> 
     </div>
   </header>
