--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -30,7 +30,7 @@
 
     <!-- Основное меню навигации -->
     <div class="menu">
-      <a href="index2.html">Главная</a>
+      <a href="index.html">Главная</a>
       <a href="receipes2.html">Рецепты</a> 
       <a href="your_receipe.html">Ваш рецепт</a> 
     </div>
