--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div class="footer">
     <div class="left">
       <!-- Контактная информация -->
-      <p>Контакты<br>тел.: 89539870092<br>email: lizashe2005@mail.ru</p>
+      <p>Контакты<br>тел.: 895398700**<br>email: lizashe2005@mail.ru</p>
     </div>
     <div class="right">
       <!-- Копирайт и информация об авторских правах -->
