--- a/receipes2.html
+++ b/receipes2.html
@@ -45,7 +45,7 @@
     <!-- Левая часть подвала с контактами -->
     <div class="left">
       <p>Контакты<br>
-      тел.: 89539870092<br>
+      тел.: 895398700**<br>
       email: lizashe2005@mail.ru</p>
     </div>
     <!-- Правая часть подвала с копирайтом -->
