--- a/your_receipe.html
+++ b/your_receipe.html
@@ -70,7 +70,7 @@
   <div class="footer">
     <!-- Левая часть подвала с контактами -->
     <div class="left">
-      <p>Контакты<br>тел.: 89539870092<br>email: lizashe2005@mail.ru</p>
+      <p>Контакты<br>тел.: 895398700**<br>email: lizashe2005@mail.ru</p>
     </div>
     <!-- Правая часть подвала с копирайтом -->
     <div>
