--- a/index.html
+++ b/index.html
@@ -59,5 +59,18 @@
     </div>
   </div>
 
+   <script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyBv87aexiTY_jIipKV986xQH1pmcyfg9rY",
+    authDomain: "cookreceipe-84401.firebaseapp.com",
+    databaseURL: "https://cookreceipe-84401-default-rtdb.firebaseio.com",
+    projectId: "cookreceipe-84401",
+    storageBucket: "cookreceipe-84401.firebasestorage.app",
+    messagingSenderId: "737772447460",
+    appId: "1:737772447460:web:b91a1d80e68b2705642ef1",
+    measurementId: "G-GX6QX3YQ67"
+  };
+ firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
