--- a/your_receipe.html
+++ b/your_receipe.html
@@ -93,7 +93,14 @@
     measurementId: "G-GX6QX3YQ67"
   };
  firebase.initializeApp(firebaseConfig);
-    
+
+
+
+// Использование:
+compressImage(file).then(compressedBase64 => {
+  const base64Data = compressedBase64.split(',')[1];
+  // Сохраняем base64Data в базу данных
+});
 // Превью фото
     document.getElementById('photo').addEventListener('change', function(e) {
       const file = e.target.files[0];
@@ -106,7 +113,26 @@
         reader.readAsDataURL(file);
       }
     });
-
+    
+function compressImage(file, maxWidth = 800, quality = 0.7) {
+  return new Promise((resolve) => {
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      const img = new Image();
+      img.src = e.target.result;
+      img.onload = function() {
+        const canvas = document.createElement('canvas');
+        const ctx = canvas.getContext('2d');
+        const ratio = Math.min(maxWidth / img.width, 1);
+        canvas.width = img.width * ratio;
+        canvas.height = img.height * ratio;
+        ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+        resolve(canvas.toDataURL('image/jpeg', quality));
+      };
+    };
+    reader.readAsDataURL(file);
+  });
+}
     // Отправка формы
     document.getElementById('recipeForm').addEventListener('submit', function(e) {
       e.preventDefault();
