--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <!-- Подключение CSS файла -->
   <link rel="stylesheet" href="styles_index2.css">
-  <!-- Подключение базы данных -->
-  <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js"></script>
 </head>
 <body>
 
@@ -51,7 +48,7 @@
   <div class="footer">
     <div class="left">
       <!-- Контактная информация -->
-      <p>Контакты<br>тел.: 895398700**<br>email: lizashe2005@mail.ru</p>
+      <p>Контакты<br>тел.: 89539870092<br>email: lizashe2005@mail.ru</p>
     </div>
     <div class="right">
       <!-- Копирайт и информация об авторских правах -->
@@ -59,18 +56,5 @@
     </div>
   </div>
 
-   <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyBv87aexiTY_jIipKV986xQH1pmcyfg9rY",
-    authDomain: "cookreceipe-84401.firebaseapp.com",
-    databaseURL: "https://cookreceipe-84401-default-rtdb.firebaseio.com",
-    projectId: "cookreceipe-84401",
-    storageBucket: "cookreceipe-84401.firebasestorage.app",
-    messagingSenderId: "737772447460",
-    appId: "1:737772447460:web:b91a1d80e68b2705642ef1",
-    measurementId: "G-GX6QX3YQ67"
-  };
- firebase.initializeApp(firebaseConfig);
-</script>
 </body>
 </html>
