--- a/receipes2.html
+++ b/receipes2.html
@@ -9,9 +9,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <!-- Подключение CSS-файла -->
   <link rel="stylesheet" href="styles_receipes2.css">
-   <!-- Подключение базы данных -->
-  <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js"></script>
 </head>
 <body>
   <!-- Шапка сайта с логотипом и навигацией -->
@@ -48,7 +45,7 @@
     <!-- Левая часть подвала с контактами -->
     <div class="left">
       <p>Контакты<br>
-      тел.: 895398700**<br>
+      тел.: 89539870092<br>
       email: lizashe2005@mail.ru</p>
     </div>
     <!-- Правая часть подвала с копирайтом -->
@@ -57,43 +54,30 @@
     </div>
   </footer>
 
-
   <script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyBv87aexiTY_jIipKV986xQH1pmcyfg9rY",
-    authDomain: "cookreceipe-84401.firebaseapp.com",
-    databaseURL: "https://cookreceipe-84401-default-rtdb.firebaseio.com",
-    projectId: "cookreceipe-84401",
-    storageBucket: "cookreceipe-84401.firebasestorage.app",
-    messagingSenderId: "737772447460",
-    appId: "1:737772447460:web:b91a1d80e68b2705642ef1",
-    measurementId: "G-GX6QX3YQ67"
-  };
- firebase.initializeApp(firebaseConfig);
- // Загрузка рецептов
-    firebase.database().ref('recipes/').on('value', (snapshot) => {
-      const recipesContainer = document.getElementById('recipesContainer');
-      recipesContainer.innerHTML = '';
-      
-      const recipes = snapshot.val();
-      if (!recipes) {
-        recipesContainer.innerHTML = '<p>Рецептов пока нет. Будьте первым!</p>';
-        return;
-      }
+    // Загружаем рецепты из localStorage
+    const recipes = JSON.parse(localStorage.getItem('recipes')) || [];
+    const recipesContainer = document.getElementById('recipesContainer');
 
-      Object.keys(recipes).forEach(key => {
-        const recipe = recipes[key];
-        recipesContainer.innerHTML += `
-          <div class="recipe-card">
-            <img src="${recipe.imageUrl}" alt="${recipe.title}" class="recipe-img">
-            <div class="recipe-content">
-              <h3 class="recipe-title">${recipe.title}</h3>
-              <p class="recipe-desc">${recipe.description}</p>
-              <a href="recipe_detail.html?id=${key}" class="recipe-link">Подробнее</a>
-            </div>
-          </div>
-        `;
-      });
+    // Проходим по каждому рецепту и добавляем его в контейнер
+    recipes.forEach((recipe, index) => {
+      // Создаем карточку рецепта
+      const recipeCard = document.createElement('div');
+      recipeCard.classList.add('recipe-card');
+
+      // Заполняем содержимое карточки
+      recipeCard.innerHTML = `
+        <img src="${recipe.image}" alt="${recipe.title}" class="recipe-image">
+        <div class="recipe-content">
+          <h2>${recipe.title}</h2>
+          <p>${recipe.description}</p>
+          <!-- Ссылка на страницу с подробной информацией о рецепте -->
+          <a href="recipe_detail.html?id=${index}">Подробнее</a>
+        </div>
+      `;
+      
+      // Добавляем карточку в контейнер
+      recipesContainer.appendChild(recipeCard);
     });
   </script>
 </body>
