--- a/receipes2.html
+++ b/receipes2.html
@@ -70,7 +70,7 @@
       <h2>${recipe.title}</h2>
       <p>${recipe.description}</p>
       <a href="recipe_detail.html?id=${index}">Подробнее</a>
-      <button class="delete-button" data-index="${index}">Удалить</button>
+      <button class="delete-button" onclick="confirmDelete('123')">Удалить</button>
     </div>
   `;
 
