--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
       <p>© 2025 Кулинарная книга.<br>Все права защищены.</p>
     </div>
   </div>
-
+<script src="script.js"></script>
 </body>
 </html>
