--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <div class="menu">
       <a href="receipes2.html">Рецепты</a>
       <a href="your_receipe.html">Ваш рецепт</a>
+      <a href="contact.html">Обратная связь</a> 
     </div>
   </header>
 
@@ -55,6 +56,7 @@
       <p>© 2025 Кулинарная книга.<br>Все права защищены.</p>
     </div>
   </div>
-<script src="script.js"></script>
+  <script src="script.js"></script>
+
 </body>
 </html>
