--- a/your_receipe.html
+++ b/your_receipe.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <!-- Базовые настройки страницы -->
+  <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(101191783, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/101191783" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+
+   <!-- Базовые настройки страницы -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ваш рецепт</title>
@@ -31,7 +48,8 @@
     <!-- Основное меню навигации -->
     <div class="menu">
       <a href="index.html">Главная</a> 
-      <a href="receipes2.html">Рецепты</a> 
+      <a href="receipes2.html">Рецепты</a>
+      <a href="contact.html">Обратная связь</a> 
     </div>
   </header>
 
@@ -143,6 +161,7 @@
       reader.readAsDataURL(photo);
     });
   </script>
-<script src="script.js"></script>
+  <script src="script.js"></script>
+
 </body>
 </html>
