--- a/recipe_detail.html
+++ b/recipe_detail.html
@@ -32,7 +32,8 @@
     <div class="menu">
       <a href="index.html">Главная</a>
       <a href="receipes2.html">Рецепты</a> 
-      <a href="your_receipe.html">Ваш рецепт</a> 
+      <a href="your_receipe.html">Ваш рецепт</a>
+      <a href="contact.html">Обратная связь</a> 
     </div>
   </header>
 
