--- a/receipes2.html
+++ b/receipes2.html
@@ -61,6 +61,7 @@
   <div class="search-container">
     <!-- Поле ввода для поиска рецептов -->
     <input type="text" id="searchInput" placeholder="Поиск рецептов..." class="search-input" value="">
+     <p id="noResultsMessage" class="no-results" style="display: none;">Рецепты не найдены</p>
   </div>
 
   <!-- Контейнер для отображения карточек рецептов -->
